fix: set Vite base to './' and use ikon.png as favicon; add public/

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Bursa Tarihi Turizm Rehberi Websitesi</title>
+  <title>Bursa Tarihi Turizm Rehberi Websitesi</title>
+  <link rel="icon" type="image/png" href="ikon.png" />
+  <link rel="apple-touch-icon" href="ikon.png" />
     </head>
 
     <body>
