--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bursa Tarihi Turizm Rehberi Websitesi</title>
-  <link rel="icon" type="image/png" href="ikon.png" />
-  <link rel="apple-touch-icon" href="ikon.png" />
+  <link rel="icon" type="image/png" href="icon.png" />
+  <link rel="apple-touch-icon" href="icon.png" />
     </head>
 
     <body>
